--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div></div></div>
 <div class="sl-block" data-block-type="image" style="min-width: 4px; min-height: 4px; width: 137px; height: 66px; left: 720px; top: 527px;" data-block-id="3d020d0902432192f427f3908b2f29f6"><div class="sl-block-content" style="z-index: 12;"><img style="" data-natural-width="137" data-natural-height="66" data-lazy-loaded="" data-src="cloudsec/8e070d1d6bddb4be82eae0b2189d04a5.svg"></div></div>
 <div class="sl-block" data-block-type="text" style="height: auto; min-width: 30px; min-height: 30px; width: 720px; left: 80px; top: 630px;" data-block-id="79fb6703de0beb6a7606a906c662e322"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 14;">
-<p style="text-align: left;"><span style="font-size:0.5em">Transcript available at: <a href="https://www.linkedin.com/pulse/sweet-bitter-cloud-computing-sze-siong-teo/" target="_blank">https://www.linkedin.com/pulse/sweet-bitter-cloud-computing-sze-siong-teo/</a></span></p>
+<p style="text-align: left;"><span style="font-size:0.5em">Transcript is available at: <a href="https://www.linkedin.com/pulse/sweet-bitter-cloud-computing-sze-siong-teo/" target="_blank">https://www.linkedin.com/pulse/sweet-bitter-cloud-computing-sze-siong-teo/</a></span></p>
 </div></div></section><section data-id="cbc3c181cd7c7451f67429dee6146b14"><div class="sl-block" data-block-type="text" style="width: 427px; left: 79px; top: 140px; height: auto;" data-block-id="1670387dc1f73f0df94d929864073a8b"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Subtitle" style="z-index: 10;">
 <h2>about me</h2>
 
