--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <div class="sl-block" data-block-type="text" style="width: 680px; left: 151px; top: 280px; height: auto;" data-block-id="89fad1a60fa0c6cfc01244a0084ed6c4"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 18;">
 <p><strong>S3Scanner - </strong><a href="https://github.com/sa7mon/S3Scanner" target="_blank">https://github.com/sa7mon/S3Scanner</a></p>
 </div></div></section><section data-id="b2db2d1ab8bc357460c6737829977ffb"><div class="sl-block" data-block-type="text" style="width: 640px; left: 159px; top: 70px; height: auto;" data-block-id="3c7d64fbae6c66cfb8ebe758748d80dd"><div class="sl-block-content" data-placeholder-tag="h2" data-placeholder-text="Title Text" style="z-index: 11;">
-<h2>overbroad IAM permission</h2>
+<h2>Overly broad IAM permission</h2>
 </div></div>
 
 <div class="sl-block" data-block-type="text" style="width: 399px; left: 80px; top: 183px; height: auto;" data-block-id="49490ae59033df6cbb39d534e6fe86f5"><div class="sl-block-style" style="z-index: 12; transform: rotate(360deg);"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 12;">
